--- a/first_dummy_agent_from_scratch.ipynb
+++ b/first_dummy_agent_from_scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "from huggingface_hub import InferenceClient\n",
     "\n",
     "## You need a token from https://hf.co/settings/tokens. If you run this on Google Colab, you can set it up in the \"settings\" tab under \"secrets\". Make sure to call it \"HF_TOKEN\"\n",
-    "os.environ[\"HF_TOKEN\"]=\"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\"\n",
+    "os.environ[\"HF_TOKEN\"]=\"\"\n",
     "\n",
     "# client = InferenceClient(\"meta-llama/Llama-3.2-3B-Instruct\")\n",
     "# if the outputs for next cells are wrong, the free model may be overloaded. You can also use this public endpoint that contains Llama-3.2-3B-Instruct\n",
